%%{init: {"theme": "base", "themeVariables": {
  "fontFamily": "Segoe UI, Arial, sans-serif",
  "primaryColor": "#ffffff",
  "primaryBorderColor": "#334155",
  "primaryTextColor": "#0f172a",
  "lineColor": "#334155",
  "tertiaryColor": "#f8fafc",
  "background": "transparent"
}}}%%
classDiagram
  direction TB

  class Usuario {
    +Long id
    +String nome
    +String email
    +String senha
  }

  class Drop {
    +Long id
    +String titulo
    +String conteudo
    +Date dataPublicacao
  }

  class DropDAO {
    +void salvar(Drop drop)
    +List&lt;Drop&gt; listar()
  }

  class JPAUtil {
    +EntityManager getEntityManager()
  }

  Usuario "1" <-- "0..*" Drop : autor
  DropDAO ..> Drop : persiste
  DropDAO ..> JPAUtil : obtem EntityManager
